2006-12-04  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/html/CSS.java (parseMarginShorthand):
	Remove debug output.

2006-12-04  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/GlyphView.java
	(J2DGlyphPainter): New inner class.
	(checkPainter): For Java2D capable environments create
	a J2DGlyphPainter.

2006-12-04  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/FreetypeGlyphVector.java
	(FreeTypeGlyphVector): Don't filter control chars here.
	(getGlyphs): Filter control chars and replace them by
	hair space char.

2006-12-04  Roman Kennke  <kennke@aicas.com>

	* native/jni/java-nio/gnu_java_nio_VMChannel.c
	(Java_gnu_java_nio_VMChannel_connect): Retry on EINTR.

2006-12-04  Roman Kennke  <kennke@aicas.com>

	* java/awt/font/TextLayout.java
	(hitTestChar): Fixed conditions for inclusion of range.
	Use layout information in the run for more efficiency.

2006-12-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/lang/management/BeanImpl.java:
	(translate(String)): Don't assume the list uses "E",
	just use the first and only type variable.
	* java/lang/management/ManagementFactory.java:
	(getPlatformMBeanServer()): Register logging bean.
	* javax/management/openmbean/OpenType.java:
	(OpenType(String,String,String)): Actually use
	the string created to handle arrays.
	
2006-12-04  Mark Wielaard  <mark@klomp.org>

	* native/jni/java-nio/gnu_java_nio_VMChannel.c
	(JCL_thread_interrupted): Use CallStaticBooleanMethod.

2006-12-04  Mark Wielaard  <mark@klomp.org>

	* vm/reference/gnu/java/nio/VMChannel.java (isThreadInterrupted):
	Make static.
	* native/jni/java-nio/gnu_java_nio_VMChannel.c
	(JCL_thread_interrupted): Only take JNIEnv.
	(vm_channel_class): New static variable.
	(initID): Set vm_channel_class.
	Wrap all reads() and writes() in do-while blocks that check
	interrupted status.

2006-12-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/javax/management/Server.java:
	Make map final and initialise it.